--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a class="underline" id="contact" href="#">contact</a>
                 </li>
                 <li>
-                    <a class="underline" href="./assets/pdf/Austin_Koeppel.pdf">resume</a>
+                    <a class="underline" href="./assets/pdf/Austin_Koeppel.pdf" target="_blank">resume</a>
                 </li>
             </ul>
         </header>
